# uav-object-counting-bsc-cs

./: .gitignore  Makefile  README.md  development_plan.md  pyproject.toml
configs/: default.yaml
data/processed/: cars.json
experiments/exp_000/: notes.md
src/: cli.py  pipelines.py
src/detection/: detector.py  postprocess.py
src/mapping/: project.py
src/stitching/: mosaic.py
src/utils/: geometry.py  io.py  vis.py
