[tool.poetry]
name = "uav-object-counting-bsc-cs"
version = "0.1.0"
description = ""
authors = ["Aleksa Sibinović <as1871@student.uni-lj.si>"]
packages = [
  { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
opencv-python = "*"
torch = "*"
torchvision = "*"
ultralytics = "*"
numpy = "*"
pyyaml = "*"
hydra-core = "*"
matplotlib = "*"
rfdetr = "^1.2.1"
supervision = "^0.26.1"
huggingface-hub = "^0.34.3"
pillow = "^11.3.0"
importlib-metadata = "^8.7.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
